--- a/form.htm
+++ b/form.htm
@@ -338,6 +338,56 @@
                                         </div>
                                     </div>
                                     <div class="form_grp">
+                                        <div class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>多筆欄位標題 1 - 第二層無標題</div>
+                                        <div class="form_content">
+                                            <div class="flex-col-equal-2">
+                                                <div class="form_grp">
+                                                    <!-- <label for="" class="form_title" aria-required="true">2-1 input</label> -->
+                                                    <div class="form_content">
+                                                        <input name="username" id="inputSample" type="text" placeholder="請輸入文字">
+                                                        <div class="notice">一般提醒訊息</div>
+                                                    </div>
+                                                </div>
+                                                <div class="form_grp">
+                                                    <!-- <label for="inputSample2" class="form_title">2-2 input</label> -->
+                                                    <div class="form_content">
+                                                        <input name="username" id="inputSample2" type="text" placeholder="請輸入文字">
+                                                        <div class="notice">一般提醒訊息</div>
+                                                    </div>
+                                                </div>
+                                                <div class="form_grp">
+                                                    <!-- <label for="" class="form_title" aria-required="true">2-3 select</label> -->
+                                                    <div class="form_content">
+                                                        <select name="" id="">
+                                                            <option value="">請選擇</option>
+                                                            <option value="">項目1</option>
+                                                            <option value="">項目2</option>
+                                                            <option value="">項目3</option>
+                                                        </select>
+                                                        <div class="notice">一般提醒訊息</div>
+                                                    </div>
+                                                </div>
+                                                <div class="form_grp">
+                                                    <!-- <label for="inputSample2" class="form_title">2-4 select</label> -->
+                                                    <div class="form_content">
+                                                        <select name="" id="">
+                                                            <option value="">請選擇</option>
+                                                            <option value="">項目1</option>
+                                                            <option value="">項目2</option>
+                                                            <option value="">項目3</option>
+                                                        </select>
+                                                        <div class="notice">一般提醒訊息</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="notice_info">多欄的提示訊息，放在最後一個『form_grp』後面</div>
+                                            <div class="checkbox gaze">
+                                                <label><input type="checkbox"><span>同紙本簡表</span></label>
+                                                <label><input type="checkbox"><span>同戶籍地址</span></label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
                                         <div class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>多筆欄位標題 2</div>
                                         <div class="form_content">
                                             <div class="flex-col-equal-3">
