--- a/form.htm
+++ b/form.htm
@@ -433,6 +433,15 @@
                                         </div>
                                     </div>
                                     <div class="form_grp">
+                                        <label for="password" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>密碼：</label>
+                                        <div class="form_content">
+                                            <div class="labelEffect password_toggle">
+                                                <input name="password" type="password" placeholder="請輸入密碼" value="1234">
+                                                <button type="button" class="btn btn-icon"><i class="i_hide"></i></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
                                         <label for="username" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>密碼修改</label>
                                         <div class="form_content">
                                             <div class="btn_grp">
@@ -790,13 +799,11 @@
                                     </div>
                                     <!-- 純按鈕 -->
                                     <div class="btn_grp">
-                                        
                                         <button class="btn btn-reset">清除</button>
                                         <button class="btn btn-submit">送出</button>
                                         <button type="button" class="btn btn-primary">主要按鈕</button>
                                         <button type="button" class="btn btn-secondary">次要按鈕</button>
                                         <button type="button" class="btn btn-normal">一般按鈕</button>
-
                                         <button type="button" id="openModal" class="btn btn-primary">跳窗</button>
                                     </div>
                                     <div class="btn_grp form_inline">
