--- a/index.htm
+++ b/index.htm
@@ -121,13 +121,22 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>表單＋列表＋個人部分的燈箱</td>
+                        <td>表單＋個人部分的燈箱</td>
                         <td><a href="form.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
+                        <td>表單＋table＋查詢</td>
+                        <td><a href="lp_table.htm" target="_blank"></a></td>
+                    </tr><tr>
+                        <td></td>
+                        <td>表單＋table＋送件日期</td>
+                        <td><a href="lp_table2.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>資料預覽</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="lp.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -137,12 +146,17 @@
                     <tr>
                         <td></td>
                         <td>檢核loading</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="loading.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>檢核失敗</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="foto-error.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>登入前</td>
+                        <td><a href="manager-login.htm" target="_blank"></a></td>
                     </tr>
                 </tbody>
             </table>
@@ -158,7 +172,27 @@
                 <tbody>
                     <tr>
                         <td></td>
+                        <td>表單</td>
+                        <td>內容同 form.htm </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>資料預覽</td>
+                        <td>內容同 lp.htm </td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>申辦流程</td>
+                        <td><a href="p_process.html"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>個資</td>
+                        <td><a href="p_sp.html" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>申辦方式</td>
                         <td><a href="..."></a></td>
                     </tr>
                     <tr>
@@ -168,7 +202,22 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>檢核成功.</td>
+                        <td>照片上傳、人像縮放</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>檢核loading</td>
+                        <td>內容同 loading.htm</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>進階檢核 - 失敗</td>
+                        <td>內容同 foto-error.htm</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>進階檢核 - 成過</td>
                         <td><a href="..."></a></td>
                     </tr>
                     <tr>
